{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 23,
  "lineage": "952039ce-2fb6-34b2-4de0-c48a91dd3f59",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "app_server_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-01T01:57:44.844-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/optimum-tensor-382601/global/firewalls/app-server-rdp",
            "log_config": [],
            "name": "app-server-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/global/networks/my-network",
            "priority": 1000,
            "project": "optimum-tensor-382601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/global/firewalls/app-server-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "sql_server_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-01T01:57:44.934-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/optimum-tensor-382601/global/firewalls/sql-server-rdp",
            "log_config": [],
            "name": "sql-server-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/global/networks/my-network",
            "priority": 1000,
            "project": "optimum-tensor-382601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/global/firewalls/sql-server-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2019-dc-v20230615",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/zones/us-central1-a/disks/app-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/optimum-tensor-382601/zones/us-central1-a/instances/app-server",
            "instance_id": "2980400744667156162",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "windows-startup-script-ps1": " # Set the username and password for the Windows VM\n $username = \"admin\"\n $password = \"Password123\"\n      \n # Create a new local user\n net user $username $password /add\n      \n # Add the user to the administrators group\n net localgroup administrators $username /add\n    \n#Enable RDP\n Set-ItemProperty -Path 'HKLM:\\System\\CurrentControlSet\\Control\\Terminal Server' -name \"fDenyTSConnections\" -Value 0\n Enable-NetFirewallRule -DisplayG [...]
            },
            "metadata_fingerprint": "vCLRFPp-LWM=",
            "name": "app-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.222.128.28",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/global/networks/my-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/regions/us-central1/subnetworks/app-subnet",
                "subnetwork_project": "optimum-tensor-382601"
              }
            ],
            "project": "optimum-tensor-382601",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/zones/us-central1-a/instances/app-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.my_network",
            "google_compute_subnetwork.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "sql_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2019-dc-v20230615",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/zones/us-central1-b/disks/sql-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/optimum-tensor-382601/zones/us-central1-b/instances/sql-server",
            "instance_id": "5014564193118064139",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "windows-startup-script-ps1": "# Set the username and password for the Windows VM\n$username = \"admin\"\n$password = \"Password123\"\n      \n# Create a new local user\nnet user $username $password /add\n      \n# Add the user to the administrators group\nnet localgroup administrators $username /add\n      \n# Download SQL Server installer\n$url = \"https://go.microsoft.com/fwlink/?linkid=866658\"\n$outfile = \"C:\\\\SQLServerInstaller.exe\"\nInvoke-WebRequest $url -OutFile $outfi [...]
            },
            "metadata_fingerprint": "YfvQiMHhmtg=",
            "name": "sql-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.192.16.137",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/global/networks/my-network",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/regions/us-central1/subnetworks/sql-subnet",
                "subnetwork_project": "optimum-tensor-382601"
              }
            ],
            "project": "optimum-tensor-382601",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/zones/us-central1-b/instances/sql-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.my_network",
            "google_compute_subnetwork.sql_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/optimum-tensor-382601/global/networks/my-network",
            "mtu": 0,
            "name": "my-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "optimum-tensor-382601",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/global/networks/my-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-30T21:40:33.701-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/optimum-tensor-382601/regions/us-central1/subnetworks/app-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/global/networks/my-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "optimum-tensor-382601",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/regions/us-central1/subnetworks/app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sql_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-30T21:40:32.949-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/optimum-tensor-382601/regions/us-central1/subnetworks/sql-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "sql-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/global/networks/my-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "optimum-tensor-382601",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimum-tensor-382601/regions/us-central1/subnetworks/sql-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    }
  ]
}